--- a/WebApiAfternoon/wwwroot/index.html
+++ b/WebApiAfternoon/wwwroot/index.html
@@ -42,7 +42,7 @@
 
                     // Diyelim ki student.name, student.id gibi alanlar var
                     studentDiv.innerHTML = `
-                        <h2>${student.name}</h2>
+                        <h2>${student.fullname} ${student.seriaNo}</h2>
                         <p>ID: ${student.id}</p>
                         <p>Age: ${student.age}</p>
                     `;
